<resources>
    <string name="app_name">Pdp.Uz</string>
    <string name="mentorlar">Mentorlar</string>
    <string name="pdp_uz">PDP.uz</string>
    <string name="kurslar">Kurslar</string>
    <string name="todo">TODO</string>
    <string name="soni">O\'quvchilar soni:20ta</string>
    <string name="guruh_nomi">Guruh nomi</string>
    <string name="mentorni_tanlang">Mentorni tanlang</string>
    <string name="kunlari">Kunlari</string>
    <string name="vaqti">Vaqti</string>
    <string name="familiyasi">Familiyasi</string>
    <string name="ismi">Ismi</string>
    <string name="otasining_ismi">Otasining ismi</string>
    <string name="date">12/22/2021</string>
    <string name="guruhlar">Guruhlar</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guruhda_dars_boshlash">Guruhda dars boshlash</string>
    <string-array name="time">
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
</resources>